kotlin/kotlin-parser/src/test/semlang/validatorTests/fail/booleanLiteral5.sem
function myStuff.myFunction(): Boolean {
  Boolean.""
}
